login form and signup link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -72,8 +72,8 @@
           </li>
             </ul>
             <div class="d-flex py-3 py-lg-0">
-              <a class="btn btn-link text-1000 fw-medium order-1 order-lg-0" href="/signin">Sign in</a>
-              <a class="btn btn-outline-danger rounded-pill order-0" href="/signup">Sign Up</a>
+              <a class="btn btn-link text-1000 fw-medium order-1 order-lg-0" href="{{ .Site.Params.loginLink }}">Sign in</a>
+              <a class="btn btn-outline-danger rounded-pill order-0" href="{{ .Site.Params.signupLink }}">Sign Up</a>
             </div>
           </div>
         </div>
