--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-12 col-lg-4 mb-3"><a href="#"><img class="d-inline-block align-middle"
                         src="/assets/img/smarterguide.png" alt="" width="30" /><span
-                        class="d-inline-block text-1000 fs-1 ms-2 fw-medium lh-base">Smart<span
+                        class="d-inline-block text-1000 fs-1 ms-2 fw-medium lh-base">Smarter<span
                             class="fw-bold">Guardians</span></span></a>
                 <p class="my-3"> <span class="fw-medium">Smarter Guardians </span>is a proxy network that has unique
                     features and
