--- a/layouts/partials/feature-home.html
+++ b/layouts/partials/feature-home.html
@@ -109,7 +109,7 @@
             </div>
             <div class="col-12 col-md-4">
                 <div class="card border-0">
-                    <img src="https://images.prismic.io/gatsby-landing-pages/2abe362c-5dc9-43ee-9e83-309874f2c57f_Up+to+10+devices.png?auto=compress%2Cformat&rect=0%2C0%2C801%2C500&w=1121&h=700&fit=max"
+                    <img src="/assets/img/uptodevices.png"
                         alt="image">
                     <div class="card-body">
                         <h5 class="card-title mt-2 fs-4">Up to 10 devices</h5>
