--- a/layouts/index.html
+++ b/layouts/index.html
@@ -89,7 +89,7 @@
             <div class="col-lg-6 col-md-5 order-md-1"><img class="img-fluid" src="assets/img/illustrations/1.png" alt="" /></div>
             <div class="col-md-7 col-lg-6 mt-5 text-center text-md-start">
               <h1 class="fw-medium">Want anything to be<br />easy with <span class="fw-bold">Smarter Guardians.</span></h1>
-              <p class="mt-3 mb-4">Provide a network for all your needs with ease and fun using <span class="fw-medium">Smarter Guardians </span>discover interesting features from us.Most people make the mistake of forcing themselves to network.Or they pretend to be outgoing to make new connections. </p><a class="btn btn-lg btn-danger hover-top btn-glow" href="#">Get Started </a>
+              <p class="mt-3 mb-4">Provide a network for all your needs with ease and fun using <span class="fw-medium">Smarter Guardians </span>discover interesting features from us.Most people make the mistake of forcing themselves to network.Or they pretend to be outgoing to make new connections. </p><a class="btn btn-lg btn-danger hover-top btn-glow" href="{{ .Site.Params.signupLink }}">Get Started </a>
             </div>
           </div>
         </div>
@@ -449,7 +449,7 @@
                   <h2>Subscribe Now for <br />Get Special Features!</h2>
                   <p class="mb-lg-0">Let's subscribe with us and find the fun.</p>
                 </div>
-                <div class="col-12 col-lg-6 text-lg-end"><a class="btn btn-lg btn-danger hover-top btn-glow text-end" href="#">Subscribe Now</a></div>
+                <div class="col-12 col-lg-6 text-lg-end"><a class="btn btn-lg btn-danger hover-top btn-glow text-end" href="{{ .Site.Params.signupLink }}">Subscribe Now</a></div>
               </div>
             </div>
           </div>
