--- a/layouts/partials/mailing.html
+++ b/layouts/partials/mailing.html
@@ -10,7 +10,7 @@
                         <p class="mb-lg-0">Let's subscribe with us and find the fun.</p>
                     </div>
                     <div class="col-12 col-lg-6 text-lg-end"><a
-                            class="btn btn-lg btn-danger hover-top btn-glow text-end" href="#">Subscribe Now</a></div>
+                            class="btn btn-lg btn-danger hover-top btn-glow text-end" href="{{ .Site.Params.signupLink }}">Subscribe Now</a></div>
                 </div>
             </div>
         </div>
