--- a/layouts/partials/movie-cards.html
+++ b/layouts/partials/movie-cards.html
@@ -54,7 +54,7 @@
         <p class="bg text-white fs-3 mt-5">
           Stream movies with a fast proxy
         </p>
-        <a class="btn btn-lg btn-danger hover-top btn-glow text-end" href="#">Download Now</a>
+        <a class="btn btn-lg btn-danger hover-top btn-glow text-end" href="{{ .Site.Params.signupLink }}">subscribe Now</a>
 
       </div>
 </section>
