--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -3,7 +3,7 @@
         <div class="text-center ">
             <p class="fs-6">The best proxy for speed and security.</p>
             <p class="fs-3">Stay safe. Play fast. Try Smarter Guardians Proxy today.</p>
-            <a class="btn btn-lg btn-danger hover-top btn-glow text-end" href="#">Subscribe Now</a>
+            <a class="btn btn-lg btn-danger hover-top btn-glow text-end" href="{{ .Site.Params.signupLink }}">Subscribe Now</a>
         </div>
         <div class="d-flex flex-row justify-content-center mt-6">
             <p class="border-right pr-2 mx-2">Swiss-based</p>
