privacy and termconditions pages

--- a/layouts/partials/feature-home.html
+++ b/layouts/partials/feature-home.html
@@ -43,7 +43,7 @@
         <div class="row d-flex flex-row mt-6">
             <div class="col-12 col-md-4">
                 <div class="card border-0">
-                    <img src="https://images.prismic.io/gatsby-landing-pages/0db302c6-efdd-46a2-bcfb-80e8ad8e1c53_Swiss+based.png?auto=compress%2Cformat&rect=0%2C0%2C800%2C500&w=1120&h=700&fit=max"
+                    <img src="/assets/img/swiss-1.png"
                         alt="image">
                     <div class="card-body">
                         <h5 class="card-title mt-2 fs-4">Swiss based</h5>
@@ -96,7 +96,7 @@
             </div>
             <div class="col-12 col-md-4">
                 <div class="card border-0">
-                    <img src="https://images.prismic.io/gatsby-landing-pages/d0a79545-c406-4945-9043-c2ab44015062_High-speed.png?auto=compress%2Cformat&rect=0%2C0%2C801%2C500&w=1121&h=700&fit=max"
+                    <img src="/assets/img/high-speed.png"
                         alt="image">
                     <div class="card-body">
                         <h5 class="card-title mt-2 fs-4">High-speed</h5>
