--- a/layouts/partials/feature-left-1.html
+++ b/layouts/partials/feature-left-1.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column flex-md-row gap-5 p-4 mt-n-10">
     <div class="col">
         <img class="w-100"
-            src="https://images.prismic.io/gatsby-landing-pages/97b61411-ae12-4bd5-90a0-243704471149_strong-encryption-desktop.png?auto=compress%2Cformat&fit=max&w=1428&h=959"
+            src="/assets/img/global-1.png"
             alt="image">
     </div>
 
