--- a/layouts/partials/feature-right-4.html
+++ b/layouts/partials/feature-right-4.html
@@ -54,7 +54,7 @@
                         <h5 class="text-white card-title mt-2 fs-3">Tor over VPN</h5>
                         <p class="card-text mt-2">Smarter Guardians Proxy comes with built-in Tor support.
 
-                            Through our VPN servers that are connected to Tor, you can route all of your traffic through
+                            Through our Proxy servers that are connected to Tor, you can route all of your traffic through
                             the Tor anonymity network.
 
                             This provides a convenient way to access Onion sites with just a single click.</p>
