--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -10,7 +10,10 @@
             <p class="border-right pr-2 mx-2">30-day money-back guarantee</p>
             <p class="pr-2 mx-2">Strict no-logs policy</p>
         </div>
-        <img src="https://images.prismic.io/gatsby-landing-pages/8341b6fb-4fad-46d0-abdc-4f6e2945360b_high-speed-swiss-vpn-that-safeguards-your-privacy.png?auto=compress%2Cformat&rect=0%2C0%2C2400%2C1200&w=1505&h=753&fit=max" class="img-fluid" alt="Hero Image">
+        <img src="/assets/img/header-1.png" class="img-fluid" alt="Hero Image">
     </div>
-        <!-- center in bootstrap -->
+        <!-- 
+                    <img src="https://images.prismic.io/gatsby-landing-pages/8341b6fb-4fad-46d0-abdc-4f6e2945360b_high-speed-swiss-vpn-that-safeguards-your-privacy.png?auto=compress%2Cformat&rect=0%2C0%2C2400%2C1200&w=1505&h=753&fit=max" class="img-fluid" alt="Hero Image">
+
+                    center in bootstrap -->
 </section>
