--- a/layouts/partials/split-section-right.html
+++ b/layouts/partials/split-section-right.html
@@ -10,7 +10,7 @@
         </div>
 
         <div class="col">
-            <img class="w-100" src="https://images.prismic.io/gatsby-landing-pages/3be07796-647d-45f4-b5a6-47b0a1273f00_Global-vpn-media-desktop.png?auto=compress%2Cformat&rect=0%2C0%2C1590%2C1352&w=1428&h=1214&fit=max"
+            <img class="w-100" src="/assets/img/global-1.png"
                 alt="image">
         </div>
     </div>
