--- a/layouts/partials/why-r-1.html
+++ b/layouts/partials/why-r-1.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="col">
-            <img class="w-100" src="https://images.prismic.io/gatsby-landing-pages/f08a4655-d0e6-41a5-a005-87727f2d360f_why-proton-vpn-desktop.png?auto=compress%2Cformat&fit=max&w=1428&h=1214"
+            <img class="w-100" src="/assets/img/global-1.png"
                 alt="image">
         </div>
     </div>
