--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -33,7 +33,20 @@
                                 </path>
                             </svg></a></li>
                 </ul>
-                <p class="text-400 my-3">&copy; 2024 Smarter Guardians</p>
+                <ul class="list-unstyled list-inline" style="display: inline; float: right;">
+                    <li class="list-inline-item">
+                            <a class="text-decoration-none{{ if eq .RelPermalink " /privacy/" }} active{{ end }}"
+                            href="/privacy">Privacy Policy</a></li>
+                            <a class="text-decoration-none{{ if eq .RelPermalink " /privacy/" }} active{{ end }}"
+                            href="/privacy">Privacy Policy</a></li>
+                            </ul>
+                <p class="text-400 my-3">&copy; 2024 Smarter Guardians
+                  
+                </p>
+               
+               
+             
+               
             </div>
         </div>
     </div>
