--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
 
-                <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                 {{/* <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/">About</a>
                 </li>
@@ -19,30 +19,10 @@
 
 
                 <li class="nav-item">
-                    <a class="nav-link{{ if eq .RelPermalink " /" }} active{{ end }}" aria-current="page"
-                        href="/">About</a>
+                    <a class="nav-link{{ if eq .RelPermalink " /about/" }} active{{ end }}" aria-current="page"
+                        href="/about">About</a>
                 </li>
-                {{/*  <li class="nav-item dropdown"></li>
-                    <a class="nav-link dropdown-toggle{{ if eq .RelPermalink " /features/" }} active{{ end }}" href="#" id="navbarDropdown"
-                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Features
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Feature 1</a></li>
-                        <li><a class="dropdown-item" href="#">Feature 2</a></li>
-                        <li><a class="dropdown-item" href="#">Feature 3</a></li>
-                    </ul>
-                </li>  */}}
-                {{/*  <li class="dropdown">
-                        <a type="button" class="dropdown-toggle" data-toggle="dropdown">
-                          Dropdown button
-                        </a>
-                        <ul class="dropdown-menu">
-                          <a class="dropdown-item" href="#">Link 1</a>
-                          <a class="dropdown-item" href="#">Link 2</a>
-                          <a class="dropdown-item" href="#">Link 3</a>
-                        </ul>
-                </li>  */}}
+               
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Features</a>
                     <div class="dropdown-menu">
@@ -61,14 +41,7 @@
                     <a class="nav-link{{ if eq .RelPermalink " /support/" }} active{{ end }}"
                         href="/support">Support</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link{{ if eq .RelPermalink " /privacy/" }} active{{ end }}"
-                        href="/Privacy">Privacy</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link{{ if eq .RelPermalink " /terms-and-conditions/" }} active{{ end }}"
-                        href="/terms-and-conditions">Terms&Conditions</a>
-                </li>
+               
                 <li class="nav-item">
                     <a class="nav-link{{ if eq .RelPermalink " /help/" }} active{{ end }}" 
                     href="/business">Business</a>
