header settings and about page setting

--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -16,12 +16,8 @@
     <!-- ===============================================-->
     <!--    Favicons-->
     <!-- ===============================================-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicons/favicon.ico">
-    <link rel="manifest" href="/assets/img/favicons/manifest.json">
-    <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
+    {{ partial "favicon" . }}
+
     <meta name="theme-color" content="#ffffff">
 
 
@@ -39,6 +35,7 @@
     <!--    Main Content-->
     <!-- ===============================================-->
     <main class="main" id="top">
+
       {{ partial "header" . }}
 
       <br><br>
@@ -49,7 +46,7 @@
 
         <div class="container">
           <div class="row flex-center">
-            <div class="col-lg-6 col-md-5 order-md-1"><img class="img-fluid" src="assets/img/illustrations/1.png" alt="" /></div>
+            <div class="col-lg-6 col-md-5 order-md-1"><img class="img-fluid" src="/assets/img/illustrations/1.png" alt="" /></div>
             <div class="col-md-7 col-lg-6 mt-5 text-center text-md-start">
               <h1 class="fw-medium">Want anything to be<br />easy with <span class="fw-bold">Smarter Guardians.</span></h1>
               <p class="mt-3 mb-4">Provide a network for all your needs with ease and fun using <span class="fw-medium">Smarter Guardians </span>discover interesting features from us.Most people make the mistake of forcing themselves to network.Or they pretend to be outgoing to make new connections. </p><a class="btn btn-lg btn-danger hover-top btn-glow" href="{{ .Site.Params.signupLink }}">Get Started </a>
@@ -139,7 +136,7 @@
               <h2>Huge Global Network<br />of Fast Proxies.</h2>
               <p>See Smarter Guardians everywhere to make it easier for you when you move locations.</p>
             </div>
-            <div class="pt-8"><img class="img-fluid" src="assets/img/gallery/map.png" alt="" /></div>
+            <div class="pt-8"><img class="img-fluid" src="/assets/img/gallery/map.png" alt="" /></div>
           </div>
         </div>
         <!-- end of .container-->
@@ -157,11 +154,11 @@
 
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-6 col-sm-4 col-md-2 mb-2 mb-md-0"><img class="img-fluid" src="assets/img/gallery/netflix.png" alt="" height="50" /></div>
-            <div class="col-6 col-sm-4 col-md-2 mb-2 mb-md-0"><img class="img-fluid" src="assets/img/gallery/reddit.png" alt="" height="50" /></div>
-            <div class="col-6 col-sm-4 col-md-2 mb-2 mb-md-0"><img class="img-fluid" src="assets/img/gallery/amazon.png" alt="" height="50" /></div>
-            <div class="col-6 col-sm-4 col-md-2 mb-2 mb-sm-0"><img class="img-fluid" src="assets/img/gallery/discord.png" alt="" height="50" /></div>
-            <div class="col-6 col-sm-4 col-md-2 mb-2 mb-sm-0"><img class="img-fluid" src="assets/img/gallery/spotify.png" alt="" height="50" /></div>
+            <div class="col-6 col-sm-4 col-md-2 mb-2 mb-md-0"><img class="img-fluid" src="/assets/img/gallery/netflix.png" alt="" height="50" /></div>
+            <div class="col-6 col-sm-4 col-md-2 mb-2 mb-md-0"><img class="img-fluid" src="/assets/img/gallery/reddit.png" alt="" height="50" /></div>
+            <div class="col-6 col-sm-4 col-md-2 mb-2 mb-md-0"><img class="img-fluid" src="/assets/img/gallery/amazon.png" alt="" height="50" /></div>
+            <div class="col-6 col-sm-4 col-md-2 mb-2 mb-sm-0"><img class="img-fluid" src="/assets/img/gallery/discord.png" alt="" height="50" /></div>
+            <div class="col-6 col-sm-4 col-md-2 mb-2 mb-sm-0"><img class="img-fluid" src="/assets/img/gallery/spotify.png" alt="" height="50" /></div>
           </div>
         </div>
         <!-- end of .container-->
@@ -192,7 +189,7 @@
                     <div class="card h-100">
                       <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
-                          <div class="d-flex align-items-center"><img class="img-fluid" src="assets/img/gallery/user-1.png" alt="" />
+                          <div class="d-flex align-items-center"><img class="img-fluid" src="/assets/img/gallery/user-1.png" alt="" />
                             <div class="flex-1 ms-3">
                               <h6 class="mb-0 fs--1 text-1000 fw-medium">Viezh Robert</h6>
                               <p class="fs--2 fw-normal mb-0">arsaw, Poland</p>
@@ -212,7 +209,7 @@
                     <div class="card h-100">
                       <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
-                          <div class="d-flex align-items-center"><img class="img-fluid" src="assets/img/gallery/user-2.png" alt="" />
+                          <div class="d-flex align-items-center"><img class="img-fluid" src="/assets/img/gallery/user-2.png" alt="" />
                             <div class="flex-1 ms-3">
                               <h6 class="mb-0 fs--1 text-1000 fw-medium">Kim Young Jou</h6>
                               <p class="fs--2 fw-normal mb-0">Seoul, South Korea</p>
@@ -232,7 +229,7 @@
                     <div class="card h-100">
                       <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
-                          <div class="d-flex align-items-center"><img class="img-fluid" src="assets/img/gallery/user-3.png" alt="" />
+                          <div class="d-flex align-items-center"><img class="img-fluid" src="/assets/img/gallery/user-3.png" alt="" />
                             <div class="flex-1 ms-3">
                               <h6 class="mb-0 fs--1 text-1000 fw-medium">Viezh Robert</h6>
                               <p class="fs--2 fw-normal mb-0">Shanxi, China</p>
@@ -256,7 +253,7 @@
                     <div class="card h-100">
                       <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
-                          <div class="d-flex align-items-center"><img class="img-fluid" src="assets/img/gallery/user-1.png" alt="" />
+                          <div class="d-flex align-items-center"><img class="img-fluid" src="/assets/img/gallery/user-1.png" alt="" />
                             <div class="flex-1 ms-3">
                               <h6 class="mb-0 fs--1 text-1000 fw-medium">Viezh Robert</h6>
                               <p class="fs--2 fw-normal mb-0">arsaw, Poland</p>
@@ -276,7 +273,7 @@
                     <div class="card h-100">
                       <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
-                          <div class="d-flex align-items-center"><img class="img-fluid" src="assets/img/gallery/user-2.png" alt="" />
+                          <div class="d-flex align-items-center"><img class="img-fluid" src="/assets/img/gallery/user-2.png" alt="" />
                             <div class="flex-1 ms-3">
                               <h6 class="mb-0 fs--1 text-1000 fw-medium">Kim Young Jou</h6>
                               <p class="fs--2 fw-normal mb-0">Seoul, South Korea</p>
@@ -296,7 +293,7 @@
                     <div class="card h-100">
                       <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
-                          <div class="d-flex align-items-center"><img class="img-fluid" src="assets/img/gallery/user-3.png" alt="" />
+                          <div class="d-flex align-items-center"><img class="img-fluid" src="/assets/img/gallery/user-3.png" alt="" />
                             <div class="flex-1 ms-3">
                               <h6 class="mb-0 fs--1 text-1000 fw-medium">Viezh Robert</h6>
                               <p class="fs--2 fw-normal mb-0">Shanxi, China</p>
@@ -320,7 +317,7 @@
                     <div class="card h-100">
                       <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
-                          <div class="d-flex align-items-center"><img class="img-fluid" src="assets/img/gallery/user-1.png" alt="" />
+                          <div class="d-flex align-items-center"><img class="img-fluid" src="/assets/img/gallery/user-1.png" alt="" />
                             <div class="flex-1 ms-3">
                               <h6 class="mb-0 fs--1 text-1000 fw-medium">Viezh Robert</h6>
                               <p class="fs--2 fw-normal mb-0">arsaw, Poland</p>
@@ -340,7 +337,7 @@
                     <div class="card h-100">
                       <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
-                          <div class="d-flex align-items-center"><img class="img-fluid" src="assets/img/gallery/user-2.png" alt="" />
+                          <div class="d-flex align-items-center"><img class="img-fluid" src="/assets/img/gallery/user-2.png" alt="" />
                             <div class="flex-1 ms-3">
                               <h6 class="mb-0 fs--1 text-1000 fw-medium">Kim Young Jou</h6>
                               <p class="fs--2 fw-normal mb-0">Seoul, South Korea</p>
@@ -360,7 +357,7 @@
                     <div class="card h-100">
                       <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
-                          <div class="d-flex align-items-center"><img class="img-fluid" src="assets/img/gallery/user-3.png" alt="" />
+                          <div class="d-flex align-items-center"><img class="img-fluid" src="/assets/img/gallery/user-3.png" alt="" />
                             <div class="flex-1 ms-3">
                               <h6 class="mb-0 fs--1 text-1000 fw-medium">Viezh Robert</h6>
                               <p class="fs--2 fw-normal mb-0">Shanxi, China</p>
@@ -419,19 +416,20 @@
     <!--    End of Main Content-->
     <!-- ===============================================-->
 
+ <!-- ===============================================-->
+    <!--    JavaScripts -->
+  <script src="/vendors/@popperjs/popper.min.js"></script>
+  <script src="/vendors/bootstrap/bootstrap.min.js"></script>
+  <script src="/vendors/is/is.min.js"></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
+  <script src="/assets/js/theme.js"></script>
 
+  <link
+    href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
+    rel="stylesheet">
 
-
-    <!-- ===============================================-->
-    <!--    JavaScripts-->
-    <!-- ===============================================-->
-    <script src="vendors/@popperjs/popper.min.js"></script>
-    <script src="vendors/bootstrap/bootstrap.min.js"></script>
-    <script src="vendors/is/is.min.js"></script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
-    <script src="assets/js/theme.js"></script>
-
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
+   
+    
   </body>
 
 </html>
